--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,3 @@
-
 pipeline {
     agent any
     
@@ -13,40 +12,40 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building the project...'
-                // Assuming a Maven build, you can replace this with the appropriate command for your build tool
-                sh 'mvn clean install'
+                // Use 'bat' for Windows instead of 'sh'
+                bat 'mvn clean install'
             }
         }
         
         stage('Test') {
             steps {
                 echo 'Running tests...'
-                // Assuming you're using Maven to run tests
-                sh 'mvn test'
+                // Use 'bat' for Windows instead of 'sh'
+                bat 'mvn test'
             }
         }
         
         stage('Static Code Analysis') {
             steps {
                 echo 'Running static code analysis...'
-                // Assuming you're using SonarQube for static analysis
-                sh 'mvn sonar:sonar'
+                // Use 'bat' for Windows instead of 'sh'
+                bat 'mvn sonar:sonar'
             }
         }
         
         stage('Package') {
             steps {
                 echo 'Packaging the application...'
-                // For packaging, if you're using Maven, you can use the following
-                sh 'mvn package'
+                // Use 'bat' for Windows instead of 'sh'
+                bat 'mvn package'
             }
         }
         
         stage('Deploy') {
             steps {
                 echo 'Deploying the application...'
-                // Add deployment commands here (e.g., to AWS, Azure, Kubernetes, etc.)
-                sh 'echo "Deploying application to the environment..."'
+                // Use 'bat' for Windows instead of 'sh'
+                bat 'echo "Deploying application to the environment..."'
             }
         }
     }
@@ -54,7 +53,6 @@ pipeline {
     post {
         always {
             echo 'Cleaning up...'
-            // You can include any cleanup tasks here
             cleanWs()
         }
         success {
