--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
             steps {
                 echo 'Building the project...'
                 // Use 'bat' for Windows instead of 'sh'
-                bat 'mvn clean install'
+                //bat 'mvn clean install'
             }
         }
         
